--- a/PInvoke MSF Payload/PInvoke MSF Payload.csproj
+++ b/PInvoke MSF Payload/PInvoke MSF Payload.csproj
@@ -4,6 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>PInvoke_MSF_Payload</RootNamespace>
+    <Platforms>AnyCPU;ARM32;ARM64;x64;x86</Platforms>
   </PropertyGroup>
 
 </Project>
